FLUID-6690: fix clipping of prefs editor on mobile

--- a/src/framework/preferences/css/sass/SeparatedPanelPrefsEditorFrame.scss
+++ b/src/framework/preferences/css/sass/SeparatedPanelPrefsEditorFrame.scss
@@ -49,6 +49,7 @@ html {
     background-image: none;
     color: var(--fl-fgColor, #5d5652);
     height: 100%;
+    margin: 0;
     overflow-x: auto;
     overflow-y: hidden;
 
